k8s/04-postgres-statefulset.yaml
# service
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ece1779
spec:
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
# statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: ece1779
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
              name: pg
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U postgres -d cloud_db"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U postgres -d cloud_db"]
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc
