k8s/06-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ece1779
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
